Fix tooltip doesn't have z-index applied

--- a/packages/core/src/tooltip/Tooltip.css
+++ b/packages/core/src/tooltip/Tooltip.css
@@ -19,6 +19,7 @@
   --tooltip-background: var(--uitkTooltip-background, var(--uitk-container-background-medium));
   --tooltip-fontSize: var(--uitkTooltip-fontSize, var(--uitk-text-fontSize));
   --tooltip-lineHeight: var(--uitkTooltip-lineHeight, var(--uitk-text-lineHeight));
+  --tooltip-zIndex: var(--uitkTooltip-zIndex, var(--uitk-zIndex-tooltip));
 }
 
 .uitkTooltip {
@@ -34,6 +35,7 @@
   padding: var(--uitkTooltip-padding, var(--uitk-size-unit));
   position: relative;
   text-align: var(--uitkTooltip-textAlign, left);
+  z-index: var(--tooltip-zIndex);
 }
 
 .uitkTooltip[data-placement^="top"] {
